Playwright Installation, Updating env and agents_llm_config.json examples, adding to hercules test.feature and test_data.txt

--- a/.gitignore
+++ b/.gitignore
@@ -128,3 +128,16 @@ dist
 .yarn/build-state.yml
 .yarn/install-state.gz
 .pnp.*
+
+# Environments
+.env
+.venv/
+env/
+venv/
+ENV/
+env.bak
+venv.bak
+*-venv/
+
+# Config files
+agents_llm_config.json
